--- a/_11ty/csspageweaver/plugins/invisibleSpaces/config.json
+++ b/_11ty/csspageweaver/plugins/invisibleSpaces/config.json
@@ -1,12 +1,12 @@
 {
-	"name": "invisibleSpaces",
-	"version": "1.0",
-	"ui": {
-		"title": "Invisible space",
-		"description": "Show/hide invisible space",
-		"toggle": true
-
-	},
-	"script": "invisibleSpaces.js",
-	"stylesheet": "invisibleSpaces.css"
+  "name": "invisibleSpaces",
+  "version": "1.0",
+  "ui": {
+    "title": "Invisible space",
+    "description": "Show/hide invisible space",
+    "toggle": true
+  },
+  "script": "invisibleSpaces.js",
+  "hook": "invisible-spaces-handler.js",
+  "stylesheet": "invisibleSpaces.css"
 }
