--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "jsdom": "^27.0.0",
     "lightningcss": "^1.30.1",
     "lightningcss-cli": "^1.30.1",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "tex-linebreak2": "^0.8.4"
   },
   "devDependencies": {
     "@11ty/eleventy-plugin-rss": "^2.0.2",
